# MGost

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: coverage.yml  flake8.yml  pypi.yml  ruff.yml  tests.yml
src/mgost/: console.py
src/mgost/api/: __init__.py  actions.py  api.py  caller.py  remote_version.py  request.py
src/mgost/api/schemas/: general.py  mgost.py
src/mgost/cli/: __init__.py  app.py  async_commands.py  callback.py
src/mgost/mgost/: __init__.py  mgost.py  progress_utils.py  sync.py  utils.py
src/mgost/settings/: __init__.py  logging.py  settings.py
tests/: utils.py
tests/api/: test_me.py  utils.py
tests/commands/environment/: __init__.py  actions.py  exit_checkers.py  functions.py  helper.py  routes.py  sync_check.py
tests/commands/environment/side_effects/file_methods/: base.py  existing.py  new.py
tests/commands/high_level/: test_init.py  test_version.py  utils.py
tests/commands/sync/: test_full_one_action.py  test_main_both.py  test_one_requirement.py  test_output_docx.py  test_time_diff_docx.py  test_time_diff_md.py
