[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/mgost"
]

[project]
name = "MGost"
version = "0.0.1"
authors = [
  {name="Геворкян Артём", email="tima-1324@mail.ru"}
]
description = "MGost converter based on ArtichaAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "typer>=0.16.0",
]


classifiers = [
  "Development Status :: 4 - Beta"
  , "Operating System :: POSIX :: Linux"
  , "Operating System :: Microsoft :: Windows"
  , "Programming Language :: Python"
  , "Programming Language :: Python :: 3"
  , "Programming Language :: Python :: 3 :: Only"
  , "Programming Language :: Python :: 3.13"
  , "Natural Language :: Russian"
]
