[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/mgost"
]

[project]
name = "MGost"
version = "0.1.3"
authors = [
  {name="Геворкян Артём", email="tima-1324@mail.ru"}
]
description = "MGost converter console app based on ArtichaAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "typer>=0.16.1",
]


classifiers = [
  "Development Status :: 1 - Planning"
  , "Operating System :: POSIX :: Linux"
  , "Operating System :: Microsoft :: Windows"
  , "Environment :: Console"
  , "Programming Language :: Python"
  , "Programming Language :: Python :: 3"
  , "Programming Language :: Python :: 3 :: Only"
  , "Programming Language :: Python :: 3.13"
  , "Natural Language :: English"
  , "Intended Audience :: Education"
  , "Intended Audience :: Information Technology"
]

[project.urls]
# Project-related URLs (e.g., homepage, documentation, repository).
homepage = "https://articha.ru/mgost/"
# repository = ""
# documentation = ""

[project.scripts]
mgost = "mgost:main"

[tool.isort]
multi_line_output = 5
